--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </section>
 
     <footer>
-        <p>© 2023 GRZESISŁAW GAMING. Wszelkie prawa zastrzeżone.</p>
+        <p>Strona jest cały czas ulepszana. Tworzono i testowano na wielu przeglądarkach.</p>
     </footer>
 </body>
 
