--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </section>
 
     <footer>
-        <p>Strona jest cały czas ulepszana. Tworzono i testowano na wielu przeglądarkach.</p>
+        <p>Strona jest cały czas ulepszana. Tworzono i testowano na wielu przeglądarkach. W razie pomysłu odnośnie strony macie mojego maila😅</p>
     </footer>
 </body>
 
