--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
     </section>
 
 <section id="posts">
-        <h2>Posty</h2>
-        <p>Przypomniał mi się taki post.... Może wskrzeszę ten temat?<button onclick="window.open('https://www.youtube.com/@grzesislawgaming/community', '_blank')">Czytaj więcej/zobacz zdjęcie</button><p>
+        <h2>Najnowszy post z YT</h2>
+        <p>OD DZIŚ MAM SWOJĄ STRONĘ INTERNETOWĄ! oto link: https://grzesislaw.github.io/GRZESISLAW-strona/<button onclick="window.open('https://www.youtube.com/@grzesislawgaming/community', '_blank')">Czytaj więcej/zobacz zdjęcie</button><p>
     </section>
 
     <footer>
