--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </header>
 
     <nav>
-        
+        <button onclick="window.location.href='chat-creator.html'">testowy-przycisk</button>
     </nav>
 
     <section id="about">
