--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </header>
 
     <nav>
-       
+       <button onclick="window.open('https://generator.pl', '_blank')">Generator Czatu</button>
     </nav>
 
     <section id="about">
