--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </header>
 
     <nav>
-       <button onclick="window.open('https://youtube.com', '_blank')">przycisk testowy</button>
+       <button onclick="window.open('https://grzesislaw.github.io/Generator-czatu/', '_blank')">Wypróbuj mój nowy generator czatu!</button>
     </nav>
 
     <section id="about">
