--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             background-color: #333;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
             transition: transform 0.3s ease;
-            border-radius: 8px; /* Dodane zaokrąglenie krawędzi */
+            border-radius: 8px; 
         }
 
         section:hover {
@@ -82,7 +82,7 @@
         }
 
         section p {
-            /* Dodałem większy interliniaż dla lepszej czytelności */
+        
             line-height: 1.6;
         }
 
@@ -94,7 +94,7 @@
             font-size: 18px;
             cursor: pointer;
             transition: background-color 0.3s ease;
-            border-radius: 5px; /* Dodane zaokrąglenie krawędzi */
+            border-radius: 5px; 
         }
 
         section button:hover {
@@ -105,7 +105,6 @@
             background-color: #2a2a2a;
             padding: 10px;
             text-align: center;
-            /* Dodałem margines górny dla lepszego odstępu od sekcji */
             margin-top: 20px;
         }
     </style>
@@ -137,7 +136,7 @@
 
 <section id="posts">
         <h2>Najnowszy post z YT</h2>
-        <p>OD DZIŚ MAM SWOJĄ STRONĘ INTERNETOWĄ! oto link: https://grzesislaw.github.io/GRZESISLAW-strona/<button onclick="window.open('https://www.youtube.com/@grzesislawgaming/community', '_blank')">Czytaj więcej/zobacz zdjęcie</button><p>
+        <p>Od dziś oficjalnie interesuje się lotnictwem i niektóre shorty będą po angielsku 😉<button onclick="window.open('https://www.youtube.com/@grzesislawgaming/community', '_blank')">Czytaj więcej/zobacz zdjęcie</button><p>
     </section>
 
     <footer>
