--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 
     <nav>
        <button onclick="window.open('https://grzesislaw.github.io/Generator-czatu/', '_blank')">Wypróbuj mój nowy generator czatu!</button>
+        <p> Trwają pracę nad sekcją "blog"</p>
     </nav>
 
     <section id="about">
