--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 <section id="posts">
         <h2>Najnowszy post z YT</h2>
-        <p>Od dziś oficjalnie interesuje się lotnictwem i niektóre shorty będą po angielsku 😉<button onclick="window.open('https://www.youtube.com/@grzesislawgaming/community', '_blank')">Czytaj więcej/zobacz zdjęcie</button><p>
+        <p>Nowy film już w montażu!<button onclick="window.open('https://www.youtube.com/@grzesislawgaming/community', '_blank')">Czytaj więcej/zobacz zdjęcie</button><p>
     </section>
 
     <footer>
