--- a/index.html
+++ b/index.html
@@ -1,148 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GRZESISŁAW GAMING</title>
+    <title>GRZESISŁAW SPOTTER</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom, #1e1e1e, #333);
-            color: #ffffff;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        header {
-            background-color: #2a2a2a;
-            padding: 20px;
-            text-align: center;
-        }
-
-        nav {
+            background-color: #333;
+            color: #fff; 
             display: flex;
             justify-content: center;
-            background-color: #333;
-            padding: 10px;
-            border-bottom: 2px solid #ff0000;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
         }
-
-        nav button {
-            background-color: #333;
-            color: #ffffff;
-            border: none;
-            padding: 10px 20px;
-            margin: 0 15px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            position: relative;
-            overflow: hidden;
-            z-index: 1;
-        }
-
-        nav button:hover {
-            background-color: #ff0000;
-        }
-
-        nav button::after {
-            content: '';
-            position: absolute;
-            top: 100%;
-            left: 50%;
-            width: 100%;
-            height: 100%;
-            background-color: #333;
-            transform: translateX(-50%);
-            z-index: -1;
-            transition: transform 0.3s ease;
-        }
-
-        nav button:hover::after {
-            transform: translateX(-50%) scaleY(2);
-        }
-
-        section {
-            padding: 20px;
-            margin: 20px 0;
-            background-color: #333;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s ease;
-            border-radius: 8px; 
-        }
-
-        section:hover {
-            transform: scale(1.02);
-        }
-
-        section h2 {
-            color: #ff0000;
-        }
-
-        section p {
-        
-            line-height: 1.6;
-        }
-
-        section button {
-            background-color: #333;
-            color: #ffffff;
-            border: none;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            border-radius: 5px; 
-        }
-
-        section button:hover {
-            background-color: #ff0000;
-        }
-
-        footer {
-            background-color: #2a2a2a;
-            padding: 10px;
-            text-align: center;
-            margin-top: 20px;
+        h1 {
+            font-size: 2em;
         }
     </style>
 </head>
-
 <body>
-    <header>
-        <h1>GRZESISŁAW GAMING</h1>
-    </header>
-
-    <nav>
-       <button onclick="window.open('https://grzesislaw.github.io/Generator-czatu/', '_blank')">Wypróbuj mój nowy generator czatu!</button>
-        <p> Trwają pracę nad sekcją "blog"</p>
-    </nav>
-
-    <section id="about">
-        <h2>O mnie</h2>
-        <p>Siemano Witajcie! Nazywam się GRZESISŁAW GAMING, i jestem małym twórcą na YT. Interesuję się grami, technologią, lotnictwem i muzyką. Poniżej znajdziecie więcej info ;D</p>
-    </section>
-
-    <section id="contact">
-        <h2>Kontakt</h2>
-        <p>Tutaj macie mojego E-Maila do kontaktu 😉 <a href="mailto:Mój e-mail:">grzesislaw.gaming@gmail.com</a></p>
-    </section>
-
-    <section id="channel">
-        <h2>Kanał</h2>
-        <p>Tu z kolei jest link do mojego kanału, zachęcam do subskrybcji: <button onclick="window.open('https://www.youtube.com/channel/UCB0zwIgCIKBpbs9rcPulZZw', '_blank')">Kanał</button></p>
-    </section>
-
-<section id="posts">
-        <h2>Najnowszy post z YT</h2>
-        <p>Nowy film już w montażu!<button onclick="window.open('https://www.youtube.com/@grzesislawgaming/community', '_blank')">Czytaj więcej/zobacz zdjęcie</button><p>
-    </section>
-
-    <footer>
-        <p>Strona jest cały czas ulepszana. Tworzono i testowano na wielu przeglądarkach. W razie pomysłu odnośnie strony macie mojego maila😅</p>
-    </footer>
+    <h1>the site is under maintenance</h1>
 </body>
-
 </html>
