--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <h2>Gallery - My best shots</h2>
         <div class="gallery-container">
             <figure>
-                <img src="GRZESISLAW-strona/DSC_0255.jpg" alt="Plane 1">
+                <img src="https://github.com/GRZESISLAW/GRZESISLAW-strona/blob/main/DSC_0255.JPG" alt="Plane 1">
                 <figcaption>(EPPO) LOT Polish Airlines Embraer 175</figcaption>
             </figure>
             <figure>
