--- a/index.html
+++ b/index.html
@@ -125,19 +125,19 @@
                 <figcaption>(EPPO) LOT Polish Airlines Embraer 175</figcaption>
             </figure>
             <figure>
-                <img src="GRZESISLAW-strona/DSC_0022.jpg" alt="Plane 2">
+                <img src="DSC_0022.jpg" alt="Plane 2">
                 <figcaption>(EPPO) Lufthansa Airbus A319</figcaption>
             </figure>
             <figure>
-                <img src="GRZESISLAW-strona/DSC_1161.jpg" alt="Plane 3">
+                <img src="DSC_1161.jpg" alt="Plane 3">
                 <figcaption>(EPPO) SkyLine Express Boeing 757</figcaption>
             </figure>
             <figure>
-                <img src="GRZESISLAW-strona/DSC_0410.jpg" alt="Plane 4">
+                <img src="DSC_0410.jpg" alt="Plane 4">
                 <figcaption>(EPPO) Wizzair Airbus A321 NEO</figcaption>
             </figure>
             <figure>
-                <img src="GRZESISLAW-strona/DSC_1152.jpg" alt="Plane 5">
+                <img src="DSC_1152.jpg" alt="Plane 5">
                 <figcaption>(EPPO) Omni Air International Boeing 777 next to Ryanair 737 MAX</figcaption>
             </figure>
             <!-- More images as needed -->
